angel - added back btns

--- a/Complaint Management System/Form1.resx
+++ b/Complaint Management System/Form1.resx
@@ -128,6 +128,16 @@
         nGTjSzq/Nz4AAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="backViewPage.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAC9SURBVFhH7ZS9
+        CgIxEIS/QgufzE4UVETFl/CBtVCxtPYHZY47kSGCzcZmP1i4sAMzyWUDSfI7M+AMHIChN6PZAA/g2dbe
+        BZG4uWrnoihK5jdg5MIIFsDdzLVeujCCNE/zquYy8VGrUUdgogCnQrNWKUTztnujVjUBxu3r5s3oev8C
+        MQWuJtAlXH/clXC+hVi5MJIM0ZEhOuaFEdX6PT41KIW4AH0XRuIh9D1wUTQ6du1c5ltv1qL3j50nobwA
+        nGTjSzq/Nz4AAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="createReviewPicture.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAD
