--- a/Complaint Management System/Form1.resx
+++ b/Complaint Management System/Form1.resx
@@ -281,4 +281,7 @@
         zaL1c0GyTbSI1pdMcY7a9Ne5uLi4uLi4uLi4uLi4jKL/Aw1299M91cr8AAAAAElFTkSuQmCC
 </value>
   </data>
+  <metadata name="SqlCommandBuilder1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
